endpoints adicionados novas us